--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div class="container">
         <div class="row">
-            <h1>AstroQuiz</h1>
-            <p>Welcome to Astroquiz</p>
+            <div class="col">
+                <h1>AstroQuiz</h1>
+                <p>Welcome to Astroquiz. More text here</p>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
