preliminary quiz page layout

--- a/quiz.html
+++ b/quiz.html
@@ -8,12 +8,50 @@
     <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="container">
+    <header class="container">
         <div class="row">
             <div class="col">
-                Quiz goes here
-            </div>        
+                <!--delete later if we don't need a header-->
+            </div>
         </div>
+    </header>
+    <main class="container-md px-4 quiz-tablet mt-5 p-5">
+        <div class="row">
+            <div class="col-xs-12 col-sm-10 order-sm-2">
+                <div class="image-container">
+                    <img src="">
+                </div>
+                <div class="question mt-3 mb-3 p-5">
+                   Sample question to see layout. Delete when JS is in.
+                </div>
+                <div class="answers">
+                    <div class="answer select-a mt-3 mb-3 p-5">
+                        Donec sodales risus sed diam lacinia aliquet.
+                    </div>
+                    <div class="answer select-b mt-3 mb-3 p-5">
+                        Etiam a dignissim diam. 
+                    </div>
+                    <div class="answer select-c mt-3 mb-3 p-5">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </div>
+                    <div class="answer select-d mt-3 mb-3 p-5">
+                        Vivamus sed cursus orci.
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-2 order-sm-1">
+                modal button, , progress rocket
+            </div>
+        </div>
+    </main>   
+    <footer class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <!--delete later if we don't need a footer-->
+            </div>
+        </div>
+    </footer>
+   
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
