added sample images, updated styling on home and quiz page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         <div class="row">
             <article class="col intro-text">
                 <p>Welcome to Astroquiz. More text here</p>
-            </div>
+            </article>
+        </div>
+        <div class="row">
+            <section class="col button-holder">
+                <a id="btn-startquiz" class="btn btn-primary px-5 py-3" href="quiz.html">Start Mission</a>
+            </section>
         </div>
     </main>   
     <footer class="container">
