--- a/quiz.html
+++ b/quiz.html
@@ -15,26 +15,26 @@
             </div>
         </div>
     </header>
-    <main class="container-md px-4 quiz-tablet mt-5 p-5">
+    <main class="container-md px-4 quiz-tablet mt-5 p-4">
         <div class="row">
             <div class="col-xs-12 col-sm-10 order-sm-2">
-                <div class="image-container">
-                    <img src="">
+                <div class="image-container text-center">
+                    <img src="./images/moon-and-earth-from-iss.jpg">
                 </div>
-                <div class="question mt-3 mb-3 p-5">
-                   Sample question to see layout. Delete when JS is in.
+                <div class="question mt-3 mb-3 p-4">
+                   Sample question to see layout. Delete when JS is in. What is the weather today?
                 </div>
                 <div class="answers">
-                    <div class="answer select-a mt-3 mb-3 p-5">
+                    <div id="select-a" class="answer mt-3 mb-3 p-4">
                         Donec sodales risus sed diam lacinia aliquet.
                     </div>
-                    <div class="answer select-b mt-3 mb-3 p-5">
+                    <div id="select-b" class="answer mt-3 mb-3 p-4">
                         Etiam a dignissim diam. 
                     </div>
-                    <div class="answer select-c mt-3 mb-3 p-5">
+                    <div id="select-c" class="answer mt-3 mb-3 p-4">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </div>
-                    <div class="answer select-d mt-3 mb-3 p-5">
+                    <div id="select-d" class="answer mt-3 mb-3 p-4">
                         Vivamus sed cursus orci.
                     </div>
                 </div>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </main>   
-    <footer class="container mt-5">
+    <footer class="container mt-4">
         <div class="row">
             <div class="col">
                 <!--delete later if we don't need a footer-->
