prelinary styles for end page

--- a/end.html
+++ b/end.html
@@ -35,12 +35,12 @@
     <main class="container-md px-4 quiz-tablet mt-5 p-4">
         <div class="endgame show">
             <div class="row">
-                <section class="page-header tablet-box col text-center">
+                <section class="page-header tablet-box col text-center p-5 mb-3">
                     <h1>Game Over</h1>
                 </section>
             </div>
             <div class="row">
-                <section id="score-box" class="col tablet-box text-center">
+                <section id="score-box" class="col tablet-box text-center p-4 mt-3 mb-3">
                     <p>You scored <span class="score">SCORE GOES HERE</span>!</p>
                     <p>Enter your initials to save your high score</p>
                     <input type="text" class="yourname" />
@@ -48,34 +48,34 @@
                 </section>
             </div>
             <div class="row">
-                <section id="button-holder" class="col button-holder tablet-box text-center">
-                    <a id="btn-returnhome" class="btn btn-primary px-5 py-3" href="index.html">Return to Base</a>
+                <section id="button-holder" class="col button-holder tablet-box text-center p-5">
+                    <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to Base</a>
                 </section>
             </div>
         </div>
         <div class="leaderboard show">
             <div class="row">
-                <section class="page-header tablet-box col text-center">
+                <section class="page-header tablet-box col text-center p-5 mb-3">
                     <h1>Leaderboard</h1>
                 </section>
             </div>
             <div class="row">
-                <section id="high-scores" class="col tablet-box text-center">
-                    <div class="score tablet-box tablet-box-alt">Score 1</div>
-                    <div class="score tablet-box tablet-box-alt">Score 2</div>
-                    <div class="score tablet-box tablet-box-alt">Score 3</div>
-                    <div class="score tablet-box tablet-box-alt">Score 4</div>
-                    <div class="score tablet-box tablet-box-alt">Score 5</div>
-                    <div class="score tablet-box tablet-box-alt">Score 6</div>
-                    <div class="score tablet-box tablet-box-alt">Score 7</div>
-                    <div class="score tablet-box tablet-box-alt">Score 8</div>
-                    <div class="score tablet-box tablet-box-alt">Score 9</div>
-                    <div class="score tablet-box tablet-box-alt">Score 9</div>
+                <section id="high-scores" class="col tablet-box text-center p-4 mt-3 mb-3">
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 1</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 2</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 3</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 4</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 5</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 6</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 7</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 8</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 9</div>
+                    <div class="score tablet-box tablet-box-alt mx-5 my-2 p-2">Score 9</div>
                 </section>
             </div>
             <div class="row">
-                <section id="button-holder" class="col button-holder tablet-box text-center">
-                    <a id="btn-returnhome" class="btn btn-primary px-5 py-3" href="index.html">Return to Base</a>
+                <section id="button-holder" class="col button-holder tablet-box text-center p-5">
+                    <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to Base</a>
                 </section>
             </div>
         </div>
