--- a/quiz.html
+++ b/quiz.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AstroQuiz</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+
+<body id="quizpage"> <!-- created an id to differentiate the quiz body from homepage -->
     <header class="container">
         <div class="row">
             <div class="col">
@@ -22,14 +25,14 @@
                     <img src="./images/moon-and-earth-from-iss.jpg">
                 </div>
                 <div class="question mt-3 mb-3 p-4">
-                   Sample question to see layout. Delete when JS is in. What is the weather today?
+                    Sample question to see layout. Delete when JS is in. What is the weather today?
                 </div>
                 <div class="answers">
                     <div id="select-a" class="answer mt-3 mb-3 p-4">
                         Donec sodales risus sed diam lacinia aliquet.
                     </div>
                     <div id="select-b" class="answer mt-3 mb-3 p-4">
-                        Etiam a dignissim diam. 
+                        Etiam a dignissim diam.
                     </div>
                     <div id="select-c" class="answer mt-3 mb-3 p-4">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -43,7 +46,7 @@
                 modal button, , progress rocket
             </div>
         </div>
-    </main>   
+    </main>
     <footer class="container mt-4">
         <div class="row">
             <div class="col">
@@ -51,9 +54,12 @@
             </div>
         </div>
     </footer>
-   
+
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
 </body>
+
 </html>
