--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
 </head>
 
 <body id="homepage"> <!-- added an id to differentiate the homepage background -->
+
+    <!-- Bootstrap Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-between align-items-center w-100">
+                <a class="navbar-brand d-flex align-items-center" href="#homepage">
+                    <img src="images/brain.png" alt="Brain Logo" height="30" class="mr-2">
+                    AstroQuiz
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="end.html">Leaderboard</a></li>
+                            <li><a class="dropdown-item" href="quiz.html">Start Quiz</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <header class="container text-center mt-4 mb-4 p-5">
         <div class="row">
             <div class="col">
@@ -21,12 +52,33 @@
     <main class="container text-center mt-4 mb-4 p-5">
         <div class="row">
             <article class="col intro-text">
-                <p>Welcome to Astroquiz. More text here</p>
+                <p>Welcome to AstroQuiz! Let's go on a celestial mission guided by NASA images, challenging your cosmic
+                    curiosity with captivating questions and fueling your passion for the universe. </p>
+
             </article>
         </div>
         <div class="row">
             <section class="col button-holder">
                 <a id="btn-startquiz" class="btn btn-primary px-5 py-3" href="quiz.html">Start Mission</a>
+            </section>
+        </div>
+        <div>
+            <!-- star wars generic style -->
+            <section class="star-wars">
+                <div class="crawl">
+                    <div class="title">
+                        <p>Episode I</p>
+                        <p>A New Hope</p>
+                    </div>
+                    <p>It is a period of cosmic discovery.</p>
+                    <p>The Space Quiz awaits you, filled with questions about the universe.</p>
+                    <p>Are you ready to embark on this interstellar journey and test your cosmic knowledge?</p>
+                    <p>Exploring the cosmos has never been more exciting as you dive deep into the mysteries of distant
+                        galaxies.</p>
+                    <p>Join us in this cosmic odyssey and let your curiosity traverse the vast reaches of space. </p>
+                    <p>Venture where no quiz-taker has ventured before and become a true explorer of the universe!"</p>
+                    <p>START YOUR JOURNEY NOW!</p>
+                </div>
             </section>
         </div>
     </main>
@@ -40,7 +92,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="/js/script.js"></script>
+
+    <script src="js/script.js"></script>
     <script src="js/apod.js"></script>
     <!-- created a new script for NASA APOD daily image to ease -->
 </body>
