modified the file and merging with Tammy's

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         galaxies.</p>
                     <p>Join us in this cosmic odyssey and let your curiosity traverse the vast reaches of space. </p>
                     <p>Venture where no quiz-taker has ventured before and become a true explorer of the universe!"</p>
-                    <p>START YOUR JOURNEY NOW!</p>
+                    <p>START YOUR JOURNEY NOW!!!</p>
                 </div>
             </section>
         </div>
