--- a/end.html
+++ b/end.html
@@ -5,12 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank you for playing AstroQuiz!</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
 </head>
 <!--move these into style.css, merge with existing box styles-->
 <style>
+    .tablet-box {
+        border-radius: 20px;
+        -webkit-box-shadow: 3px 4px 21px -10px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 3px 4px 21px -10px rgba(0, 0, 0, 0.75);
+        box-shadow: 3px 4px 21px -10px rgba(0, 0, 0, 0.75);
+        background-color: var(--accent2);
+        border: 1px solid var(--accent2a);
+    }
 
+    .tablet-box-alt {
+        background-color: var(--accent1);
+        border: 1px solid var(--accent1a);
+    }
+</style>
+
+<body id="quizend"> <!-- for body change -->
     <header class="container">
         <div class="row">
             <div class="col">
@@ -65,7 +81,7 @@
                 </section>
             </div>
         </div>
-
+    </main>
     <footer class="container mt-4">
         <div class="row">
             <div class="col">
@@ -73,6 +89,9 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
 </body>
 
