creating a new barnch with proper modification

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main class="container text-center mt-4 mb-4 p-5">
         <div class="row">
             <article class="col intro-text">
-                <p>Welcome to AstroQuiz!!!! Let's go on a celestial mission guided by NASA images, challenging your
+                <p>Welcome to AstroQuiz! Let's go on a celestial mission guided by NASA images, challenging your
                     cosmic
                     curiosity with captivating questions and fueling your passion for the universe. </p>
 
