Created the variable section

--- a/quiz.html
+++ b/quiz.html
@@ -24,20 +24,20 @@
                 <div class="image-container tablet-box text-center">
                     <img src="./images/moon-and-earth-from-iss.jpg">
                 </div>
-                <div class="question tablet-box mt-3 mb-3 p-4">
+                <div id="question-box" class="question tablet-box mt-3 mb-3 p-4">
                     Sample question to see layout. Delete when JS is in. What is the weather today?
                 </div>
                 <div class="answers">
-                    <div id="select-a" class="answer mt-3 mb-3 p-4">
+                    <div id="select-a" class="clickable answer mt-3 mb-3 p-4">
                         Donec sodales risus sed diam lacinia aliquet.
                     </div>
-                    <div id="select-b" class="answer mt-3 mb-3 p-4">
+                    <div id="select-b" class="clickable answer mt-3 mb-3 p-4">
                         Etiam a dignissim diam.
                     </div>
-                    <div id="select-c" class="answer mt-3 mb-3 p-4">
+                    <div id="select-c" class="clickable answer mt-3 mb-3 p-4">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </div>
-                    <div id="select-d" class="answer mt-3 mb-3 p-4">
+                    <div id="select-d" class="clickable answer mt-3 mb-3 p-4">
                         Vivamus sed cursus orci.
                     </div>
                 </div>
