functional NASA ID images added

--- a/quiz.html
+++ b/quiz.html
@@ -14,19 +14,17 @@
     <header class="container">
         <div class="row">
             <div class="col">
-                <!--delete later if we don't need a header-->
+                <!-- delete later if we don't need a header -->
             </div>
         </div>
     </header>
     <main class="container-md px-4 quiz-tablet mt-5 p-4">
         <div class="row">
             <section class="col-xs-12 col-sm-10 order-sm-2">
-                <div class="image-container tablet-box text-center">
-                    <img src="./images/moon-and-earth-from-iss.jpg">
-                </div>
                 <div id="question-box" class="question tablet-box mt-3 mb-3 p-4">
                     Sample question to see layout. Delete when JS is in. What is the weather today?
                 </div>
+                <div id="question-image"></div> <!-- This is the new div for displaying NASA images -->
                 <div class="answers">
                     <div id="select-a" class="clickable answer mt-3 mb-3 p-4">
                         Donec sodales risus sed diam lacinia aliquet.
@@ -62,7 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    
+
     <script src="js/questions.js"></script>
     <script src="js/script.js"></script>
 </body>
