--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
     <title>AstroQuiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body id="quizpage"> <!-- created an id to differentiate the quiz body from homepage -->
@@ -26,16 +26,16 @@
                 </div>
                 <div id="question-image"></div> <!-- This is the new div for displaying NASA images -->
                 <div class="answers">
-                    <div id="select-a" class="clickable answer mt-3 mb-3 p-4">
+                    <div id="select-a" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
                         Donec sodales risus sed diam lacinia aliquet.
                     </div>
-                    <div id="select-b" class="clickable answer mt-3 mb-3 p-4">
+                    <div id="select-b" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
                         Etiam a dignissim diam.
                     </div>
-                    <div id="select-c" class="clickable answer mt-3 mb-3 p-4">
+                    <div id="select-c" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </div>
-                    <div id="select-d" class="clickable answer mt-3 mb-3 p-4">
+                    <div id="select-d" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
                         Vivamus sed cursus orci.
                     </div>
                 </div>
