more css variables, refactoring, repositioned sections in page order

--- a/quiz.html
+++ b/quiz.html
@@ -21,22 +21,22 @@
     <main class="container-md px-4 quiz-tablet mt-5 p-4">
         <div class="row">
             <section class="col-xs-12 col-sm-10 order-sm-2">
+                <div id="question-image" class="image-container text-center"><!-- div for displaying NASA images --></div> 
                 <div id="question-box" class="question tablet-box mt-3 mb-3 p-4">
-                    Sample question to see layout. Delete when JS is in. What is the weather today?
+                    <!-- Question to be populated here -->
                 </div>
-                <div id="question-image"></div> <!-- This is the new div for displaying NASA images -->
                 <div class="answers">
                     <div id="select-a" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
-                        Donec sodales risus sed diam lacinia aliquet.
+                        <!-- Answer A to be populated here -->
                     </div>
                     <div id="select-b" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
-                        Etiam a dignissim diam.
+                        <!-- Answer B to be populated here -->
                     </div>
                     <div id="select-c" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        <!-- Answer C to be populated here --> 
                     </div>
                     <div id="select-d" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4">
-                        Vivamus sed cursus orci.
+                        <!-- Answer D to be populated here -->
                     </div>
                 </div>
             </section>
