added initial js for solaire api

--- a/quiz.html
+++ b/quiz.html
@@ -95,5 +95,6 @@
 
     <script src="js/questions.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/solaire.js"></script>
 </body>
 </html>
