--- a/quiz.html
+++ b/quiz.html
@@ -53,13 +53,9 @@
                     Progress bar goes here
                 </div>
                 <!--these probably want different styling and positions but are here for functionality for now-->
-                <button id="btn-more-info" class="btn btn-primary" disabled>Learn More</button>
+                <p>Buttons to remove</p>
                 <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
-                <button id="next-questions" class="btn btn-success">Next Question</button>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#correctModal">
-                    Correct
-                  </button>
-                  
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#correctModal">Correct Modal</button>
             </aside>
         </div>
     </main>
@@ -75,11 +71,12 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h1 class="modal-title fs-5" id="correctModalLabel">Correct!</h1>
+                <h3 class="modal-title fs-5" id="correctModalLabel">Correct!</h3>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    That's the correct answer!
+                    <h4 class="modal-dyk-subheading">Did you know?</h4>
+                    <p class="modal-dyk"></p>
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
