homepage, fonts, footer, nav and icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.cdnfonts.com/css/procyon?styles=164763" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/fauna?styles=159199" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/drius?styles=164403" rel="stylesheet">
+
 </head>
 
 <body id="homepage"> <!-- added an id to differentiate the homepage background -->
@@ -17,7 +21,7 @@
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100">
                 <a class="navbar-brand d-flex align-items-center" href="#homepage">
-                    <img src="images/brain.png" alt="Brain Logo" height="30" class="mr-2">
+                    <img src="images/planet.png" alt="planet" height="40" class="mr-2">
                     AstroQuiz
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,6 +49,7 @@
     <header class="container text-center mt-4 mb-4 p-5">
         <div class="row">
             <div class="col">
+                <div><img src="images/Rocket.png" alt="Rocket emoji" height="100"></div>
                 <h1>AstroQuiz</h1>
             </div>
         </div>
@@ -83,10 +88,12 @@
             </section>
         </div>
     </main>
-    <footer class="container">
-        <div class="row">
-            <div class="col">
-                <!--delete later if we don't need a footer-->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p>&copy; 2023 AstroQuiz. All Rights Reserved. Media contents provided by NASA &#9733;</p>
+                </div>
             </div>
         </div>
     </footer>
