--- a/end.html
+++ b/end.html
@@ -11,6 +11,14 @@
 </head>
 
 <body id="quizend">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#homepage">
+                <img src="images/Star.png" alt="star" height="30" class="mr-2">
+                AstroQuiz
+            </a>
+        </div>
+    </nav>
     <header class="container">
         <div class="row">
             <div class="col">
@@ -32,7 +40,8 @@
                         <button id="submit-score" class="btn btn-primary">Save</button>
                     </section>
                     <section id="button-holder" class="col button-holder tablet-box tablet-box-alt text-center p-5">
-                        <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to Base</a>
+                        <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to
+                            Base</a>
                     </section>
                 </div>
                 <div class="leaderboard show">
@@ -52,7 +61,8 @@
                         <div class="score tablet-box mx-5 my-2 p-2">Score 9</div>
                     </section>
                     <section id="button-holder" class="col button-holder tablet-box tablet-box-alt text-center p-5">
-                        <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to Base</a>
+                        <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to
+                            Base</a>
                     </section>
                 </div>
             </section>
