--- a/quiz.html
+++ b/quiz.html
@@ -8,9 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body id="quizpage">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#homepage">
+                <img src="images/astro.png" alt="astronaut" height="30" class="mr-2">
+                AstroQuiz
+            </a>
+        </div>
+    </nav>
     <header class="container">
         <div class="row">
             <div class="col">
@@ -21,21 +30,26 @@
     <main class="container-md quiz-tablet mt-5 p-4">
         <div class="row">
             <section class="col-xs-12 col-sm-10 order-sm-2">
-                <div id="question-image" class="image-container text-center"><!-- div for displaying NASA images --></div> 
+                <div id="question-image" class="image-container text-center"><!-- div for displaying NASA images -->
+                </div>
                 <div id="question-box" class="question tablet-box mt-3 mb-3 p-4">
                     <!-- Question to be populated here -->
                 </div>
                 <div class="answers">
-                    <div id="select-a" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4" data-clicked="unclicked">
+                    <div id="select-a" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4"
+                        data-clicked="unclicked">
                         <!-- Answer A to be populated here -->
                     </div>
-                    <div id="select-b" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4" data-clicked="unclicked">
+                    <div id="select-b" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4"
+                        data-clicked="unclicked">
                         <!-- Answer B to be populated here -->
                     </div>
-                    <div id="select-c" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4" data-clicked="unclicked">
-                        <!-- Answer C to be populated here --> 
+                    <div id="select-c" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4"
+                        data-clicked="unclicked">
+                        <!-- Answer C to be populated here -->
                     </div>
-                    <div id="select-d" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4" data-clicked="unclicked">
+                    <div id="select-d" class="clickable answer tablet-box tablet-box-alt mt-3 mb-3 p-4"
+                        data-clicked="unclicked">
                         <!-- Answer D to be populated here -->
                     </div>
                 </div>
@@ -50,7 +64,8 @@
                     <p class="current-score">100</p>
                 </div>
                 <div class="text-center my-2">
-                    <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal" data-bs-target="#howModal">?</button>
+                    <button type="button" class="btn btn-primary btn-howtoplay" data-bs-toggle="modal"
+                        data-bs-target="#howModal">?</button>
                 </div>
                 <div id="progress-bar" class="text-center">
                     Progress bar goes here
@@ -58,7 +73,8 @@
                 <div>
                     <p>Buttons to remove</p>
                     <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#correctModal">Correct Modal</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#correctModal">Correct Modal</button>
                 </div>
             </aside>
         </div>
@@ -71,20 +87,21 @@
         </div>
     </footer>
     <!-- Modals -->
-    <div class="modal fade quiz-modal" id="correctModal" tabindex="-1" aria-labelledby="correctModalLabel" aria-hidden="true">
+    <div class="modal fade quiz-modal" id="correctModal" tabindex="-1" aria-labelledby="correctModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h3 class="modal-title fs-5" id="correctModalLabel">Correct!</h3>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h3 class="modal-title fs-5" id="correctModalLabel">Correct!</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <h4 class="modal-dyk-subheading">Did you know?</h4>
                     <p class="modal-dyk"></p>
                 </div>
                 <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button id="next-question" type="button" class="btn btn-success">Next Question</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button id="next-question" type="button" class="btn btn-success">Next Question</button>
                 </div>
             </div>
         </div>
@@ -93,19 +110,20 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                <h3 class="modal-title fs-5" id="howModalLabel">How to Play!</h3>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h3 class="modal-title fs-5" id="howModalLabel">How to Play!</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Choose the correct answer from the options to power up your ship! But be careful! You will lose 25 points for each incorrect answer!</p>
+                    <p>Choose the correct answer from the options to power up your ship! But be careful! You will lose
+                        25 points for each incorrect answer!</p>
                 </div>
                 <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
@@ -114,4 +132,5 @@
     <script src="js/script.js"></script>
     <script src="js/solaire.js"></script>
 </body>
+
 </html>
