--- a/quiz.html
+++ b/quiz.html
@@ -68,15 +68,37 @@
                         data-bs-target="#howModal">?</button>
                 </div>
                 <div id="progress-bar" class="text-center">
-                    Progress bar goes here
+                    <h5>Distance in kilometers</h5>
+                    <ul>
+                        <div class="dot-label" id="dot10">0 km</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot9">384K</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot8">58M</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot7">108M</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot6">228M</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot5">778M</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot4">1.43B</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot3">2.87B</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot2">4.50B</div>
+                        <div class="dot-line">|</div>
+                        <div class="dot-label" id="dot1">5.91B</div>
+                    </ul>
                 </div>
-                <div>
-                    <p>Buttons to remove</p>
-                    <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                        data-bs-target="#correctModal">Correct Modal</button>
-                </div>
-            </aside>
+        </div>
+        <div>
+            <p>Buttons to remove</p>
+            <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#correctModal">Correct
+                Modal</button>
+        </div>
+        </aside>
         </div>
     </main>
     <footer class="container mt-4">
