--- a/end.html
+++ b/end.html
@@ -69,7 +69,7 @@
               id="high-scores"
               class="col tablet-box tablet-box-alt text-center p-4 mt-3 mb-3"
             >
-              <div class="score tablet-box mx-5 my-2 p-2">Score 1</div>
+              <div class="score-a tablet-box mx-5 my-2 p-2">Score 1</div>
               <div class="score tablet-box mx-5 my-2 p-2">Score 2</div>
               <div class="score tablet-box mx-5 my-2 p-2">Score 3</div>
               <div class="score tablet-box mx-5 my-2 p-2">Score 4</div>
