--- a/end.html
+++ b/end.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thank you for playing AstroQuiz!</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link href="https://fonts.cdnfonts.com/css/procyon?styles=164763" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/fauna?styles=159199" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/drius?styles=164403" rel="stylesheet"> 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body id="quizend">
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="#homepage">
-          <img src="images/Star.png" alt="star" height="30" class="mr-2" />
-          AstroQuiz
-        </a>
+          <div class="d-flex justify-content-between align-items-center w-100">
+              <a class="navbar-brand d-flex align-items-center" href="/">
+                  <img src="images/Star.png" alt="planet" height="40" class="mr-2">
+                  AstroQuiz
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+          </div>
       </div>
-    </nav>
-    <header class="container">
+  </nav>
+  <!-- Header -->
+  <header class="container">
       <div class="row">
         <div class="col">
           <!--delete later if we don't need a header-->
@@ -32,43 +38,25 @@
     <main class="container-md quiz-tablet mt-5 p-4">
       <div class="row">
         <section class="col-xs-12 col-sm-10 order-sm-2">
-          <div class="endgame show">
-            <section
-              class="page-header tablet-box tablet-box-alt col text-center p-5 mb-3"
-            >
+          <div class="endgame">
+            <section class="page-header tablet-box tablet-box-alt col text-center p-5 mb-3">
               <h1>Game Over</h1>
             </section>
-            <section
-              id="score-box"
-              class="col tablet-box tablet-box-alt text-center p-4 mt-3 mb-3"
-            >
+            <section id="score-box" class="col tablet-box tablet-box-alt text-center p-4 mt-3 mb-3">
               <p>You scored <span class="this-score">SCORE GOES HERE</span>!</p>
               <p>Enter your name to save your high score</p>
               <input type="text" class="yourname" />
               <button id="submit-score" class="btn btn-primary">Save</button>
             </section>
-            <section
-              id="button-holder"
-              class="col button-holder tablet-box tablet-box-alt text-center p-5"
-            >
-              <a
-                id="btn-returnhome"
-                class="btn btn-primary px-5 py-3 mt-3"
-                href="index.html"
-                >Return to Base</a
-              >
+            <section id="button-holder" class="col button-holder tablet-box tablet-box-alt text-center p-5">
+              <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to Base</a>
             </section>
           </div>
-          <div class="leaderboard show hidden">
-            <section
-              class="page-header tablet-box tablet-box-alt col text-center p-5 mb-3"
-            >
+          <div class="leaderboard hidden">
+            <section class="page-header tablet-box tablet-box-alt col text-center p-5 mb-3">
               <h1>Leaderboard</h1>
             </section>
-            <section
-              id="high-scores"
-              class="col tablet-box tablet-box-alt text-center p-4 mt-3 mb-3"
-            >
+            <section id="high-scores" class="col tablet-box tablet-box-alt text-center p-4 mt-3 mb-3">
               <div class="score-a tablet-box mx-5 my-2 p-2">Score 1</div>
               <div class="score tablet-box mx-5 my-2 p-2">Score 2</div>
               <div class="score tablet-box mx-5 my-2 p-2">Score 3</div>
@@ -80,16 +68,8 @@
               <div class="score tablet-box mx-5 my-2 p-2">Score 9</div>
               <div class="score tablet-box mx-5 my-2 p-2">Score 9</div>
             </section>
-            <section
-              id="button-holder"
-              class="col button-holder tablet-box tablet-box-alt text-center p-5"
-            >
-              <a
-                id="btn-returnhome"
-                class="btn btn-primary px-5 py-3 mt-3"
-                href="index.html"
-                >Return to Base</a
-              >
+            <section id="button-holder" class="col button-holder tablet-box tablet-box-alt text-center p-5">
+              <a id="btn-returnhome" class="btn btn-primary px-5 py-3 mt-3" href="index.html">Return to Base</a>
             </section>
           </div>
         </section>
@@ -103,11 +83,7 @@
         </div>
       </div>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/end.js"></script>
     <script src="js/script.js"></script>
   </body>
