--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to AstroQuiz!</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.cdnfonts.com/css/procyon?styles=164763" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/fauna?styles=159199" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/drius?styles=164403" rel="stylesheet">
-
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body id="homepage"> <!-- added an id to differentiate the homepage background -->
-
-    <!-- Bootstrap Navbar -->
+<body id="homepage">
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center w-100">
@@ -45,7 +42,7 @@
             </div>
         </div>
     </nav>
-
+    <!-- Header -->
     <header class="container text-center mt-4 mb-4 p-5">
         <div class="row">
             <div class="col">
@@ -54,6 +51,7 @@
             </div>
         </div>
     </header>
+    <!-- Main -->
     <main class="container text-center mt-4 mb-4 p-5">
         <div class="row">
             <article class="col intro-text">
@@ -88,6 +86,7 @@
             </section>
         </div>
     </main>
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
@@ -97,13 +96,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     <script src="js/apod.js"></script>
-    <!-- created a new script for NASA APOD daily image to ease -->
 </body>
-
 </html>
