planet stats added to modal using api

--- a/quiz.html
+++ b/quiz.html
@@ -64,6 +64,7 @@
                         <!-- Answer D to be populated here -->
                     </div>
                 </div>
+                <div class="next-q-link"><a href="#">Next Question</a></div>
             </section>
             <aside class="col-xs-12 col-sm-2 order-sm-1">
                 <div class="side-widget text-center my-2 p-3">
