bootstrap form styles for end page

--- a/end.html
+++ b/end.html
@@ -44,8 +44,8 @@
             </section>
             <section id="score-box" class="col tablet-box tablet-box-alt text-center p-4 mt-3 mb-3">
               <p>You scored <span class="this-score">SCORE GOES HERE</span>!</p>
-              <p>Enter your name to save your high score</p>
-              <input type="text" class="yourname" />
+              <label for="yourname" class="form-label">Enter your name to save your high score</label>
+              <input type="text" class="form-control" id="yourname" />
               <button id="submit-score" class="btn btn-primary">Save</button>
             </section>
             <section id="button-holder" class="col button-holder tablet-box tablet-box-alt text-center p-5">
