more bootstrap spacing

--- a/quiz.html
+++ b/quiz.html
@@ -24,9 +24,9 @@
         </div>
     </nav>
     <!-- Main / Quiz Area -->
-    <main class="container-md quiz-tablet my-xs-1 my-lg-4 p-4">
+    <main class="container quiz-tablet my-xs-1 my-lg-4 p-4">
         <div class="row">
-            <section class="col-xs-12 col-lg-10 order-lg-2">
+            <section class="col-xs-12 col-lg-10 order-lg-2 ps-lg-4">
                 <div id="question-image" class="image-container text-center">
                     <!-- div for displaying NASA images -->
                 </div>
@@ -64,17 +64,17 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="side-widget text-center my-2 mx-2 p-3 col col-xs-6 col-lg-12">
+                    <div class="side-widget text-center my-2 mx-2 mx-lg-0 p-3 col col-xs-6 col-lg-12">
                         <h5>Points Available</h5>
                         <p class="points-available">100</p>
                     </div>
-                    <div class="side-widget text-center my-2 mx-2 p-3 col col-xs-6 col-lg-12">
+                    <div class="side-widget text-center my-2 mx-2 mx-lg-0 p-3 col col-xs-6 col-lg-12">
                         <h5>Your Score So Far</h5>
                         <p class="current-score">0</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div id="progress-bar" class="side-widget text-center mx-2 my-2 p-3 col col-xs-12">
+                    <div id="progress-bar" class="side-widget text-center mx-2 mx-lg-0 my-2 p-3 col col-xs-12">
                         <h4>You have travelled...</h4>
                         <div>
                             <div class="dot-label" id="dot10">0 km</div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="row">
                     <div class="text-center col col-xs-12 mt-3">
-                        <button id="btn-abort" class="btn btn-danger"><a href="/">Abort Mission</a></button>
+                        <button id="btn-abort" class="btn btn-danger"><a href="index.html">Abort Mission</a></button>
                     </div>
                 </div>
             </aside>
