--- a/end.html
+++ b/end.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
           <div class="d-flex justify-content-between align-items-center w-100">
-              <a class="navbar-brand d-flex align-items-center" href="/index.html">
+              <a class="navbar-brand d-flex align-items-center" href="index.html">
                   <img src="images/Star.png" alt="planet" height="40" class="mr-2">
                   AstroQuiz
               </a>
@@ -23,7 +23,7 @@
       </div>
   </nav>
   <!-- Main / Score area -->
-    <main class="container-md quiz-tablet my-xs-1 my-lg-4 p-4">
+    <main class="container quiz-tablet my-xs-1 my-lg-4 p-4">
       <div class="row">
         <section class="col-xs-12">
           <div class="endgame">
